examples/v05/checked-mir/reject/init_before_use.hew
// Reject fixture for `MirCheck::InitialisedBeforeUse`.
//
// `let x;` declares the binding without initialising it. `let _y = x;`
// reads `x` before any `Bind` for it appears in the function's MIR
// statement stream. The Checked MIR init pass rejects the program and
// `hew compile` exits non-zero without producing a binary. The
// diagnostic payload carries the binding name and the use site.
fn main() {
    let x: i64;
    let _y = x;
}
